# ams-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  ci.yml  rust.yml
src/: main.rs
