[package]
name = "ams-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.4"
log = "0.4.19"
owo-colors = "3.5.0"
pretty_env_logger = "0.5.0"
regex = "1.9.1"
reqwest = {version = "0.11.18", features = ["blocking", "json"]}
serde = {version = "1.0.171", features = ["derive"]}
